change projects section into dynamic

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <a href="#" onclick="return false;" class="subjects">JavaScript</a>
                 </div>
                 <div class="buttons">
-                    <button id="seeproject1" type="button" class="button">
+                    <button id="seeproject" type="button" class="button">
                         See project
                     </button>
                 </div>
@@ -117,7 +117,7 @@
                     <a href="#" onclick="return false;" class="subjects">JavaScript</a>
                 </div>
                 <div class="buttons">
-                    <button id="seeproject2" type="button" class="button">
+                    <button id="seeproject" type="button" class="button">
                         See project
                     </button>
                 </div>
@@ -150,7 +150,7 @@
                     <a href="#" onclick="return false;" class="subjects">JavaScript</a>
                 </div>
                 <div class="buttons">
-                    <button id="seeproject3" type="button" class="button">
+                    <button id="seeproject" type="button" class="button">
                         See project
                     </button>
                 </div>
@@ -182,7 +182,7 @@
                     <a href="#" onclick="return false;" class="subjects">JavaScript</a>
                 </div>
                 <div class="buttons">
-                    <button id="seeproject4" type="button" class="button">
+                    <button id="seeproject" type="button" class="button">
                         See project
                     </button>
                 </div>
@@ -300,226 +300,8 @@
         </div>
     </div>
     <!-- popup window -->
-    <div class="popupWindow1 hidden">
-        <div class="popupWindowContainer">
-            <div class="popupTop">
-                <h1 class="title">Tonic</h1>
-                <a class="a1" id="closeMenuBtn1" href="#" onclick="return false;"><img src="./images/Icon - Cancel.svg"
-                        alt=""></a>
-            </div>
-
-            <div class="details">
-                <p class="name">CANOPY</p>
-                <img src="./snapshoots/Counter.svg" alt="counter icon">
-                <p class="position">Back End Dev</p>
-                <img src="./snapshoots/Counter.svg" alt="counter icon">
-                <p class="year">2015</p>
-            </div>
-
-            <div class="popupImage1">
-                <img src="./snapshoots/work portfolio.png" alt="">
-            </div>
-
-            <div class="popupfooter">
-                <div class="about-job">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                        of type and scrambled it 1960s. Lorem Ipsum is simply dummy text of the printing and typesetting
-                        industry.
-
-                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-                        printer took a galley of type and scrambled it 1960s with the releorem Ipsum is simply dummy
-                        text of the printing and typesetting industry. Lorem Ipsum han printer took a galley of type and
-                        scrambled it 1960s with the releawn printer took a galley of type and scrambled it 1960s.
-                    </p>
-                </div>
-                <div class="right-box">
-                    <div class="subject-pictures">
-                        <a href="#" onclick="return false;" class="subjects">HTML</a>
-                        <a href="#" onclick="return false;" class="subjects">CSS</a>
-                        <a href="#" onclick="return false;" class="subjects">JavaScript</a>
-                    </div>
-                    <div class="divider">
-                        <img src="./images/Vector 4.png" alt="">
-                    </div>
-                    <div class="buttons">
-                        <button type="button" class="button liveBtn">
-                            See live <img src="./icons/Icon - Export.svg" alt="">
-                        </button>
-                        <button type="button" class="button sourceBtn">
-                            See source <img src="./icons/Frame.png" alt="">
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="popupWindow2 hidden">
-        <div class="popupWindowContainer">
-            <div class="popupTop">
-                <h1 class="title">Multi-Post Stories</h1>
-                <a class="a2" id="closeMenuBtn2" href="#" onclick="return false;"><img src="./images/Icon - Cancel.svg"
-                        alt=""></a>
-            </div>
-
-            <div class="details">
-                <p class="name">FACEBOOK</p>
-                <img src="./snapshoots/Counter.svg" alt="counter icon">
-                <p class="position"> Back End Dev</p>
-                <img src="./snapshoots/Counter.svg" alt="counter icon">
-                <p class="year">2015</p>
-            </div>
-
-            <div class="popupImage2">
-                <img src="./snapshoots/work portfolio 2.png" alt="">
-            </div>
-
-            <div class="popupfooter">
-                <div class="about-job">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                        of type and scrambled it 1960s. Lorem Ipsum is simply dummy text of the printing and typesetting
-                        industry.
-
-                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-                        printer took a galley of type and scrambled it 1960s with the releorem Ipsum is simply dummy
-                        text of the printing and typesetting industry. Lorem Ipsum han printer took a galley of type and
-                        scrambled it 1960s with the releawn printer took a galley of type and scrambled it 1960s.
-                    </p>
-                </div>
-                <div class="right-box">
-                    <div class="subject-pictures">
-                        <a href="#" onclick="return false;" class="subjects">HTML</a>
-                        <a href="#" onclick="return false;" class="subjects">CSS</a>
-                        <a href="#" onclick="return false;" class="subjects">JavaScript</a>
-                    </div>
-                    <div class="divider">
-                        <img src="./images/Vector 4.png" alt="">
-                    </div>
-                    <div class="buttons">
-                        <button type="button" class="button liveBtn">
-                            See live <img src="./icons/Icon - Export.svg" alt="">
-                        </button>
-                        <button type="button" class="button sourceBtn">
-                            See source <img src="./icons/Frame.png" alt="">
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="popupWindow3 hidden">
-        <div class="popupWindowContainer">
-            <div class="popupTop">
-                <h1 class="title">Facebook 360</h1>
-                <a class="a3" id="closeMenuBtn3" href="#" onclick="return false;"><img src="./images/Icon - Cancel.svg"
-                        alt=""></a>
-            </div>
-
-            <div class="details">
-                <p class="name">FACEBOOK</p>
-                <img src="./snapshoots/Counter.svg" alt="counter icon">
-                <p class="position"> Back End Dev</p>
-                <img src="./snapshoots/Counter.svg" alt="counter icon">
-                <p class="year">2015</p>
-            </div>
-
-            <div class="popupImage3">
-                <img src="./snapshoots/work portfolio 3.png" alt="">
-            </div>
-
-            <div class="popupfooter">
-                <div class="about-job">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                        of type and scrambled it 1960s. Lorem Ipsum is simply dummy text of the printing and typesetting
-                        industry.
-
-                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-                        printer took a galley of type and scrambled it 1960s with the releorem Ipsum is simply dummy
-                        text of the printing and typesetting industry. Lorem Ipsum han printer took a galley of type and
-                        scrambled it 1960s with the releawn printer took a galley of type and scrambled it 1960s.
-                    </p>
-                </div>
-                <div class="right-box">
-                    <div class="subject-pictures">
-                        <a href="#" onclick="return false;" class="subjects">HTML</a>
-                        <a href="#" onclick="return false;" class="subjects">CSS</a>
-                        <a href="#" onclick="return false;" class="subjects">JavaScript</a>
-                    </div>
-                    <div class="divider">
-                        <img src="./images/Vector 4.png" alt="">
-                    </div>
-                    <div class="buttons">
-                        <button type="button" class="button liveBtn">
-                            See live <img src="./icons/Icon - Export.svg" alt="">
-                        </button>
-                        <button type="button" class="button sourceBtn">
-                            See source <img src="./icons/Frame.png" alt="">
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="popupWindow4 hidden">
-        <div class="popupWindowContainer">
-            <div class="popupTop">
-                <h1 class="title">Uber Navigation</h1>
-                <a class="a4" id="closeMenuBtn4" href="#" onclick="return false;"><img src="./images/Icon - Cancel.svg"
-                        alt=""></a>
-            </div>
-
-            <div class="details">
-                <p class="name">Uber</p>
-                <img src="./snapshoots/Counter.svg" alt="counter icon">
-                <p class="position"> Lead Developer </p>
-                <img src="./snapshoots/Counter.svg" alt="counter icon">
-                <p class="year">2018</p>
-            </div>
-            <div class="popupImage4">
-                <img src="./snapshoots/work portfolio 4.png" alt="">
-            </div>
-
-
-
-
-            <div class="popupfooter">
-                <div class="about-job">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                        of type and scrambled it 1960s. Lorem Ipsum is simply dummy text of the printing and typesetting
-                        industry.
-
-                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-                        printer took a galley of type and scrambled it 1960s with the releorem Ipsum is simply dummy
-                        text of the printing and typesetting industry. Lorem Ipsum han printer took a galley of type and
-                        scrambled it 1960s with the releawn printer took a galley of type and scrambled it 1960s.
-                    </p>
-                </div>
-                <div class="right-box">
-                    <div class="subject-pictures">
-                        <a href="#" onclick="return false;" class="subjects">HTML</a>
-                        <a href="#" onclick="return false;" class="subjects">CSS</a>
-                        <a href="#" onclick="return false;" class="subjects">JavaScript</a>
-                    </div>
-                    <div class="divider">
-                        <img src="./images/Vector 4.png" alt="">
-                    </div>
-                    <div class="buttons">
-                        <button type="button" class="button liveBtn">
-                            See live <img src="./icons/Icon - Export.svg" alt="">
-                        </button>
-                        <button type="button" class="button sourceBtn">
-                            See source <img src="./icons/Frame.png" alt="">
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="popupWindow hidden">
+        
     </div>
     <script src="./script.js"></script>
 </body>
